--- a/Templates/index.html
+++ b/Templates/index.html
@@ -101,7 +101,7 @@
                 <a href="form.html" style="color: white; text-decoration: none;">Don't Have An Account? Create One!!</a><br/>
             </div>
             <div >
-                <a href="forgot.html" style="text-align: center"class="forgot" >Forgot password</a>
+                <a href="forgotPassword.jsp" style="text-align: center"class="forgot" >Forgot password</a>
             </div>
             </div>
             <div class="footer">
